--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.1.0
+  provider: ^6.1.1
+  shared_preferences: ^2.2.2
+  flutter_secure_storage: ^9.0.0
+  google_fonts: ^6.1.0
+  cached_network_image: ^3.3.0
+  carousel_slider: ^5.0.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
